--- a/crypto_clustering.ipynb
+++ b/crypto_clustering.ipynb
@@ -1633,43 +1633,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[-0.33285464,  1.0383583 , -0.56494435],\n",
-       "       [-0.31620149,  1.03851511, -0.56537078],\n",
-       "       [ 2.30004045,  1.64353216, -0.570651  ],\n",
+       "array([[-0.33749438,  1.01872924, -0.54110016],\n",
+       "       [-0.32083061,  1.01879048, -0.54145315],\n",
+       "       [ 2.30124041,  1.60196662, -0.67021517],\n",
        "       ...,\n",
-       "       [ 0.3268763 , -2.33198921,  0.46344651],\n",
-       "       [-0.17901176, -2.02470009,  0.4332558 ],\n",
-       "       [-0.2828024 ,  0.82179669, -0.25676861]])"
+       "       [ 0.32655102, -2.30714874,  0.35085461],\n",
+       "       [-0.15576277, -2.00201321,  0.3560191 ],\n",
+       "       [-0.28945769,  0.89067859, -0.21929015]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Using PCA to reduce dimension to three principal components.\n",
-    "# YOUR CODE HERE"
+    "# YOUR CODE HERE\n",
+    "# Initialize PCA model\n",
+    "pca = PCA(n_components=3)\n",
+    "# Get two principal components for the iris data.\n",
+    "crypto_pca = pca.fit_transform(crypto_scaled)\n",
+    "crypto_pca"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(532, 3)\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -1699,63 +1697,63 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>42</th>\n",
-       "      <td>-0.332855</td>\n",
-       "      <td>1.038358</td>\n",
-       "      <td>-0.564944</td>\n",
+       "      <td>-0.337494</td>\n",
+       "      <td>1.018729</td>\n",
+       "      <td>-0.541100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>404</th>\n",
-       "      <td>-0.316201</td>\n",
-       "      <td>1.038515</td>\n",
-       "      <td>-0.565371</td>\n",
+       "      <td>-0.320831</td>\n",
+       "      <td>1.018790</td>\n",
+       "      <td>-0.541453</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1337</th>\n",
-       "      <td>2.300040</td>\n",
-       "      <td>1.643532</td>\n",
-       "      <td>-0.570651</td>\n",
+       "      <td>2.301240</td>\n",
+       "      <td>1.601967</td>\n",
+       "      <td>-0.670215</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>BTC</th>\n",
-       "      <td>-0.149023</td>\n",
-       "      <td>-1.309646</td>\n",
-       "      <td>0.182620</td>\n",
+       "      <td>-0.145211</td>\n",
+       "      <td>-1.332634</td>\n",
+       "      <td>0.161055</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ETH</th>\n",
-       "      <td>-0.162646</td>\n",
-       "      <td>-2.019908</td>\n",
-       "      <td>0.380155</td>\n",
+       "      <td>-0.153525</td>\n",
+       "      <td>-2.031361</td>\n",
+       "      <td>0.324773</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>LTC</th>\n",
-       "      <td>-0.159391</td>\n",
-       "      <td>-1.123165</td>\n",
-       "      <td>-0.021041</td>\n",
+       "      <td>-0.164840</td>\n",
+       "      <td>-1.104823</td>\n",
+       "      <td>-0.010461</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>DASH</th>\n",
-       "      <td>-0.410793</td>\n",
-       "      <td>1.224033</td>\n",
-       "      <td>-0.517184</td>\n",
+       "      <td>-0.395973</td>\n",
+       "      <td>1.172740</td>\n",
+       "      <td>-0.476296</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>XMR</th>\n",
-       "      <td>-0.148242</td>\n",
-       "      <td>-2.196597</td>\n",
-       "      <td>0.375973</td>\n",
+       "      <td>-0.143491</td>\n",
+       "      <td>-2.245367</td>\n",
+       "      <td>0.391397</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ETC</th>\n",
-       "      <td>-0.161087</td>\n",
-       "      <td>-2.020010</td>\n",
-       "      <td>0.380143</td>\n",
+       "      <td>-0.151967</td>\n",
+       "      <td>-2.031475</td>\n",
+       "      <td>0.324750</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ZEC</th>\n",
-       "      <td>-0.179011</td>\n",
-       "      <td>-2.024700</td>\n",
-       "      <td>0.433256</td>\n",
+       "      <td>-0.155762</td>\n",
+       "      <td>-2.002013</td>\n",
+       "      <td>0.356019</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1763,26 +1761,31 @@
       ],
       "text/plain": [
        "          PC 1      PC 2      PC 3\n",
-       "42   -0.332855  1.038358 -0.564944\n",
-       "404  -0.316201  1.038515 -0.565371\n",
-       "1337  2.300040  1.643532 -0.570651\n",
-       "BTC  -0.149023 -1.309646  0.182620\n",
-       "ETH  -0.162646 -2.019908  0.380155\n",
-       "LTC  -0.159391 -1.123165 -0.021041\n",
-       "DASH -0.410793  1.224033 -0.517184\n",
-       "XMR  -0.148242 -2.196597  0.375973\n",
-       "ETC  -0.161087 -2.020010  0.380143\n",
-       "ZEC  -0.179011 -2.024700  0.433256"
+       "42   -0.337494  1.018729 -0.541100\n",
+       "404  -0.320831  1.018790 -0.541453\n",
+       "1337  2.301240  1.601967 -0.670215\n",
+       "BTC  -0.145211 -1.332634  0.161055\n",
+       "ETH  -0.153525 -2.031361  0.324773\n",
+       "LTC  -0.164840 -1.104823 -0.010461\n",
+       "DASH -0.395973  1.172740 -0.476296\n",
+       "XMR  -0.143491 -2.245367  0.391397\n",
+       "ETC  -0.151967 -2.031475  0.324750\n",
+       "ZEC  -0.155762 -2.002013  0.356019"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Create a DataFrame with the three principal components.\n",
-    "# YOUR CODE HERE"
+    "# YOUR CODE HERE\n",
+    "# Transform PCA data to a DataFrame\n",
+    "pcs_df = pd.DataFrame(\n",
+    "    data=crypto_pca, columns=[\"PC 1\", \"PC 2\", \"PC 3\"], index=X.index.copy()\n",
+    ")\n",
+    "pcs_df.head(10)"
    ]
   },
   {
